Small cleanup of Makefile and Dockerfile and CI (#117)
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -7,25 +7,27 @@ on:
     branches:
       - main
   workflow_dispatch:
+    inputs:
+      image-tag:
+        description: Image tag to run
+        type: string
 env:
   WORKING_DIR: ${{ github.workspace }}/src/autobutler/backend
+  GOFLAGS: -buildvcs=false
 defaults:
   run:
     shell: bash
 jobs:
   backend-build:
     runs-on: ubuntu-latest
+    container:
+      image: exokomodo/exoflow-devcontainer:${{ inputs.image-tag || (github.event_name == 'pull_request' && 'latest') || (github.head_ref || github.ref_name) }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Setup go
-        uses: actions/setup-go@v5
-        with:
-          go-version-file: ${{ env.WORKING_DIR }}/go.mod
       - name: Install dependencies
         working-directory: ${{ env.WORKING_DIR }}
-        run: |
-          go mod download
+        run: go mod download
       - name: Build
         working-directory: ${{ env.WORKING_DIR }}
         run: make build
