--- a/src/autobutler/backend/.gitignore
+++ b/src/autobutler/backend/.gitignore
@@ -19,9 +19,5 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-e2e.json
-
-!build/
-build/*
-!build/.gitkeep
-
+exercise.json
+build/
