--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -31,3 +31,6 @@ jobs:
       - name: Build
         working-directory: ${{ env.WORKING_DIR }}
         run: make build
+      - name: Build all architectures
+        working-directory: ${{ env.WORKING_DIR }}
+        run: make build/all
