multi-arch-backend: Rename
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/.github/workflows/backend-release.yml
+++ b/.github/workflows/backend-release.yml
@@ -10,7 +10,7 @@ defaults:
   run:
     shell: bash
 jobs:
-  backend-build:
+  backend-release:
     runs-on: ubuntu-latest
     container:
       image: exokomodo/exoflow-devcontainer:${{ inputs.image-tag || (github.event_name == 'pull_request' && 'latest') || (github.head_ref || github.ref_name) }}
