--- a/src/autobutler/backend/.goreleaser.yaml
+++ b/src/autobutler/backend/.goreleaser.yaml
@@ -6,6 +6,8 @@
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
 # vim: set ts=2 sw=2 tw=0 fo=cnqoj
 
+# NOTE: https://goreleaser.com/customization/monorepo/
+
 version: 2
 
 before:
