--- a/src/autobutler/backend/.goreleaser.yaml
+++ b/src/autobutler/backend/.goreleaser.yaml
@@ -6,11 +6,9 @@
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
 # vim: set ts=2 sw=2 tw=0 fo=cnqoj
 
-# NOTE: https://goreleaser.com/customization/monorepo/
-
 version: 2
 
-project_name: ab
+project_name: autobutler
 
 before:
   hooks:
@@ -31,8 +29,10 @@ archives:
   - formats: [tar.gz]
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
-      ab_{{ .Os }}_
-      {{- if eq .Arch "386" }}i386
+      {{ .ProjectName }}_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
       {{- if .Arm }}v{{ .Arm }}{{ end }}
     # use zip for windows archives
