--- a/src/autobutler/backend/.goreleaser.yaml
+++ b/src/autobutler/backend/.goreleaser.yaml
@@ -24,13 +24,15 @@ builds:
       - linux
       - windows
       - darwin
+    ldflags:
+      - -s -w -X github.com/exokomodo/exoflow/autobutler/backend/pkg/version.Semver={{.Version}}
 
 archives:
   - formats: [tar.gz]
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
       {{ .ProjectName }}_
-      {{- title .Os }}_
+      {{- .Os }}_
       {{- if eq .Arch "amd64" }}x86_64
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
