--- a/src/autobutler/backend/.goreleaser.yaml
+++ b/src/autobutler/backend/.goreleaser.yaml
@@ -25,7 +25,7 @@ builds:
       - windows
       - darwin
     ldflags:
-      - -s -w -X github.com/exokomodo/exoflow/autobutler/backend/pkg/version.Semver={{.Version}}
+      - -s -w -X github.com/exokomodo/exoflow/autobutler/backend/pkg/version.Semver=v{{.Version}}
 
 archives:
   - formats: [tar.gz]
