--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "ms-python.vscode-pylance",
     "golang.go",
     "nuxtr.nuxt-vscode-extentions",
-    "ms-vscode-remote.remote-containers"
+    "ms-vscode-remote.remote-containers",
+    "a-h.templ"
   ]
 }
