--- a/.github/ISSUE_TEMPLATE/feature.yaml
+++ b/.github/ISSUE_TEMPLATE/feature.yaml
@@ -1,6 +1,6 @@
 name: Feature Request
 description: Request a new feature
-title: "[Feature]: "
+title: "[Feature] "
 labels: ["enhancement"]
 projects: ["exokomodo/8"]
 assignees: []
