--- a/.github/ISSUE_TEMPLATE/feature.yaml
+++ b/.github/ISSUE_TEMPLATE/feature.yaml
@@ -2,7 +2,7 @@ name: Feature Request
 description: Request a new feature
 title: "[Feature] "
 labels: ["enhancement"]
-projects: ["exokomodo/8"]
+projects: ["autobutler-ai/2"]
 assignees: []
 type: Feature
 body:
