--- a/.github/workflows/dotai-ci.yml
+++ b/.github/workflows/dotai-ci.yml
@@ -7,10 +7,6 @@ on:
     branches:
       - main
   workflow_dispatch:
-    inputs:
-      image-tag:
-        description: Image tag to run
-        type: string
 env:
   WORKING_DIR: ${{ github.workspace }}/src/dotai/ui
 defaults:
@@ -19,11 +15,11 @@ defaults:
 jobs:
   dotai-ci:
     runs-on: ubuntu-latest
-    container:
-      image: exokomodo/exoflow-devcontainer:${{ inputs.image-tag || (github.event_name == 'pull_request' && 'latest') || (github.head_ref || github.ref_name) }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Setup bun
+        uses: oven-sh/setup-bun@v2
       - name: Install node-gyp
         working-directory: ${{ env.WORKING_DIR }}
         run: |
