--- a/.github/workflows/dotai-cd.yml
+++ b/.github/workflows/dotai-cd.yml
@@ -4,10 +4,6 @@ on:
     branches:
       - main
   workflow_dispatch:
-    inputs:
-      image-tag:
-        description: Image tag to run
-        type: string
 jobs:
   dotai-cd:
     name: autobutler.ai - Trigger Deploy
@@ -19,7 +15,7 @@ jobs:
           github-token: ${{ secrets.FG_PAT }}
           script: |
             github.rest.actions.createWorkflowDispatch({
-              owner: 'exokomodo',
+              owner: 'autobutler-ai',
               repo: 'autobutler.ai',
               workflow_id: 'deploy.yml',
               ref: 'main',
