--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,24 +4,17 @@ on:
     branches:
       - main
   workflow_dispatch:
-    inputs:
-      image-tag:
-        description: Image tag to run
-        type: string
 defaults:
   run:
     shell: bash
 jobs:
   lint:
     runs-on: ubuntu-latest
-    container:
-      image: exokomodo/exoflow-devcontainer:${{ inputs.image-tag || (github.event_name == 'pull_request' && 'latest') || (github.head_ref || github.ref_name) }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version-file: .nvmrc
+      - name: Setup bun
+        uses: oven-sh/setup-bun@v2
       - name: Lint
         run: |
           make lint
