--- a/src/autobutler/.goreleaser.yaml
+++ b/src/autobutler/.goreleaser.yaml
@@ -41,6 +41,8 @@ archives:
     format_overrides:
       - goos: windows
         formats: [zip]
+    files:
+      - deployments/*
 
 changelog:
   sort: asc
