consistent-component-names: Improve recommended extensions
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,13 +1,15 @@
 {
   "recommendations": [
-    "ms-python.black-formatter",
-    "ms-python.debugpy",
-    "ms-python.isort",
-    "ms-python.python",
-    "ms-python.vscode-pylance",
-    "golang.go",
-    "nuxtr.nuxt-vscode-extentions",
-    "ms-vscode-remote.remote-containers",
-    "a-h.templ"
+    "a-h.templ",
+    "jasonnutter.vscode-codeowners",
+    "streetsidesoftware.code-spell-checker",
+    "bierner.color-info",
+    "ms-azuretools.vscode-containers",
+    "ms-azuretools.vscode-docker",
+    "editorconfig.editorconfig",
+    "docsmsft.docs-preview",
+    "shd101wyy.markdown-preview-enhanced",
+    "davidanson.vscode-markdownlint",
+    "tyriar.sort-lines"
   ]
 }
