--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,7 @@
         "serve",
       ],
       "envFile": "${workspaceFolder}/.env",
+      "preLaunchTask": "make: generate"
     },
     {
       "name": "Debug running process",
