Add icon theme as default
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -10,6 +10,7 @@
     "davidanson.vscode-markdownlint",
     "tyriar.sort-lines",
     "golang.go",
-    "bradlc.vscode-tailwindcss"
+    "bradlc.vscode-tailwindcss",
+    "vscode-icons-team.vscode-icons"
   ]
 }
