218: Make setup-templ a composite action
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/.github/workflows/autobutler-build.yml
+++ b/.github/workflows/autobutler-build.yml
@@ -16,9 +16,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install templ
-        run: |
-          make setup/templ
+      - name: Setup Templ
+        uses: ./.github/actions/setup-templ
       - name: Install dependencies
         run: |
           go mod download
