192: Cleanup calendar and store events in DB (#246)
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -11,6 +11,8 @@
     "tyriar.sort-lines",
     "golang.go",
     "bradlc.vscode-tailwindcss",
-    "vscode-icons-team.vscode-icons"
+    "vscode-icons-team.vscode-icons",
+    "alexcvzz.vscode-sqlite",
+    "inferrinizzard.prettier-sql-vscode"
   ]
 }
