--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,9 @@
   "workbench.iconTheme": "vscode-icons",
   "cSpell.words": [
     "autobutler",
+    "Bingus",
+    "htmx",
+    "linecap",
     "Sprintf",
     "templ"
   ],
