sqlc: Stuff works mostly, except for return values of queries
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,9 +12,13 @@
   "cSpell.words": [
     "autobutler",
     "Bingus",
+    "gonic",
     "htmx",
+    "iofs",
     "linecap",
+    "modernc",
     "Sprintf",
+    "sqlc",
     "templ"
   ],
 }
