Rename setup go step (#249)
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/.github/workflows/autobutler-build.yml
+++ b/.github/workflows/autobutler-build.yml
@@ -16,7 +16,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - uses: actions/setup-go@v6
+      - name: Setup go
+        uses: actions/setup-go@v6
         with:
           go-version-file: go.mod
       - name: Setup sqlc
