--- a/.github/workflows/cd-azure.yml
+++ b/.github/workflows/cd-azure.yml
@@ -25,7 +25,7 @@ on:
         type: string
 
 env:
-  AZURE_RESOURCE_GROUP: autobutler-rg
+  AZURE_RESOURCE_GROUP: autobutler
   ACR_NAME: autobutleracr
 
 jobs:
