--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Important Links",
   "scripts": {
     "test/e2e": "npx playwright test",
-    "test/e2e/report": "npx playwright show-report"
+    "test/report/e2e": "npx playwright show-report"
   },
   "keywords": [],
   "author": "",
