Devices storage bar (#358)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## Important Links",
   "scripts": {
     "test/e2e": "npx playwright test",
-    "test/e2e/report": "npx playwright show-report"
+    "test/e2e/report": "npx playwright show-report",
+    "test/e2e/install": "npx playwright install"
   },
   "keywords": [],
   "author": "",
