modify issue template page (#380)

--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -19,6 +19,9 @@ body:
       options:
         - N/A
         - Calendar
+        - Photos
+        - Docs
+        - Books
         - Cirrus (Drive)
         - General UI
         - Backend
