--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@eslint/js": "^9.39.1",
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.10.1",
-    "@typescript-eslint/eslint-plugin": "^8.18.0",
-    "@typescript-eslint/parser": "^8.18.0",
-    "eslint": "^9.16.0",
-    "globals": "^15.12.0",
-    "prettier": "^3.4.2",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
+    "npm-check-updates": "^19.1.2",
+    "prettier": "^3.6.2",
     "yaml-lint": "^1.7.0"
   }
 }
