404: Format js and ts as well
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "test/e2e": "npx playwright test",
     "test/e2e/report": "npx playwright show-report",
     "test/e2e/install": "npx playwright install",
-    "lint:js": "eslint internal/server/public/scripts/**/*.js",
-    "lint:ts": "eslint tests/e2e/**/*.ts",
+    "lint:js": "eslint internal/server/public/scripts/**/*.js && prettier --check internal/server/public/scripts/**/*.js",
+    "lint:ts": "eslint tests/e2e/**/*.ts && prettier --check tests/e2e/**/*.ts",
     "lint:css": "prettier --check internal/server/public/styles/**/*.css",
     "lint:yaml": "yamllint '**/*.{yaml,yml}'",
-    "format:js": "eslint --fix internal/server/public/scripts/**/*.js",
-    "format:ts": "eslint --fix tests/e2e/**/*.ts",
+    "format:js": "eslint --fix internal/server/public/scripts/**/*.js && prettier --write internal/server/public/scripts/**/*.js",
+    "format:ts": "eslint --fix tests/e2e/**/*.ts && prettier --write tests/e2e/**/*.ts",
     "format:css": "prettier --write internal/server/public/styles/**/*.css",
     "check-updates": "ncu -u"
   },
