419: Refactor util files
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,17 +11,33 @@
   "workbench.iconTheme": "vscode-icons",
   "cSpell.words": [
     "autobutler",
+    "Bavail",
     "Bingus",
+    "bookutil",
     "botelsqlite",
+    "EPUB",
+    "exif",
+    "fileutil",
+    "goexif",
     "gonic",
     "htmx",
+    "imageutil",
     "iofs",
+    "Jsonschema",
+    "Konon",
+    "Lanczos",
     "linecap",
     "modernc",
+    "imageutil",
+    "reflectutil",
+    "rwcarlsen",
     "serverutil",
     "Sprintf",
     "sqlc",
+    "stringutil",
+    "strs",
     "templ",
-    "toastr"
+    "toastr",
+    "webp"
   ],
 }
