419: Move sqlc code from pkg/db to internal/db
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -2,8 +2,8 @@ version: "2"
 sql:
   - engine: "sqlite"
     queries: "sql/queries"
-    schema: "pkg/db/migrations"
+    schema: "internal/db/migrations"
     gen:
       go:
         package: "db"
-        out: "pkg/db"
+        out: "internal/db"
